Client: add navbar and handle login, logout and signup

--- a/client/src/assets/languages/en.json
+++ b/client/src/assets/languages/en.json
@@ -1,12 +1,15 @@
 {
   "global": {
-    "error": "Error"
+    "error": "Error",
+    "welcome": "Welcome",
+    "notSignedIn": "You are not signed in"
   },
   "auth": {
     "emailPlaceholder": "Email Address",
     "passwordPlaceholder": "Password",
     "submit": "Submit",
     "signin": "Sign In",
-    "signup": "Sign Up"
+    "signup": "Sign Up",
+    "signout": "Sign Out"
   }
 }
